# check_your_code

./: README.md  pyproject.toml
notebooks/: data_research.ipynb  qualitative_parser_research.ipynb  vectorization_reaserch.ipynb
src/: check_code.py  config.py  loader.py  main.py  myconfig.py  processing.py  processing_first_data.py  train_first_model.py  train_model.py
src/texts/: example_code.py
train_first_model/: myconfig.py  train_first_model.py
