[tool.poetry]
name = "check-your-code"
version = "0.1.0"
description = ""
authors = ["Sasha Khinevich <hinevics@gmail.com>"]
readme = "README.md"
packages = [{include = "check_your_code"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
